[package]
name = "tors"
version = "0.1.0"
edition = "2021"

[features]
clipboard = []

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
inquire = "0.7.5"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
text_io = "0.1.12"
wl-clipboard-rs = "0.8.1"
yansi = "1.0.1"
